# mull

./: README  mull  mull.cabal
src/: .Main.hs.swp  Ask.hs  Main.hi  Main.hs  Math.hs  Mus.hs  Opt.hs
src/Subject/: General.hs  Math.hs  Music.hs
