name:           mull
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  FUtil, Haskore, HSH, base, random, readline

executable:     mull
main-is:        Main.hs
hs-source-dirs: src
