name:           mull
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  FUtil, HSH, Haskore, MonadRandom, base, directory, random,
                readline

executable:     mull
ghc-options:    -threaded
main-is:        Main.hs
hs-source-dirs: src
