name:           mull
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:
    ALUT
  , ansi-terminal
  , base
  , directory
  , filepath
  , MonadRandom
  , mtl
  , polyopt
  , random
  , readline

executable:     mull
ghc-options:    -threaded -Wall -O3
main-is:        Main.hs
hs-source-dirs: src
